2012-01-03  Jon Lee  <jonlee@apple.com>

        Leak of WebNotificationClient when page is destroyed
        https://bugs.webkit.org/show_bug.cgi?id=74980
        <rdar://problem/10611231>

        Reviewed by Mark Rowe.

        * blackberry/WebCoreSupport/NotificationPresenterImpl.cpp:
        (WebKit::NotificationPresenterImpl::notificationControllerDestroyed): Empty implementation, because ownership
        model differs.
        * blackberry/WebCoreSupport/NotificationPresenterImpl.h:

2011-12-15  Jacky Jiang  <zhajiang@rim.com>

        [BlackBerry] Upstream BlackBerry WebCoreSupport drag client and context menu client
        https://bugs.webkit.org/show_bug.cgi?id=74643

        Reviewed by Rob Buis.

        Initial upstream, no new tests.

        * blackberry/WebCoreSupport/ContextMenuClientBlackBerry.cpp: Added.
        * blackberry/WebCoreSupport/ContextMenuClientBlackBerry.h: Added.
        * blackberry/WebCoreSupport/DragClientBlackBerry.cpp: Added.
        * blackberry/WebCoreSupport/DragClientBlackBerry.h: Added.

2011-12-15  Jacky Jiang  <zhajiang@rim.com>

        [BlackBerry] Regression: lots of checkerboarding
        https://bugs.webkit.org/show_bug.cgi?id=74611

        Reviewed by Daniel Bates.

        Fix a regression caused by r102843 which introduced a lot of unnecessary
        checkerboarding. R102843 changed behavior by removing a check for blit
        based on whether the render actually took place and whether the
        backingstore was in the midst of suspended updates.
        The initial anthor is Adam Treat <atreat@rim.com>.

        * blackberry/Api/BackingStore.cpp:
        (BlackBerry::WebKit::BackingStorePrivate::repaint):
        (BlackBerry::WebKit::BackingStorePrivate::slowScroll):
        (BlackBerry::WebKit::BackingStorePrivate::renderVisibleContents):
        (BlackBerry::WebKit::BackingStorePrivate::renderBackingStore):
        * blackberry/Api/BackingStore_p.h: