@@ -1,0 +1,38 @@
+/*
+ * Copyright (C) 2010, 2011 Research In Motion Limited. All rights reserved.
+ *
+ * This library is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU Lesser General Public
+ * License as published by the Free Software Foundation; either
+ * version 2 of the License, or (at your option) any later version.
+ *
+ * This library is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * Lesser General Public License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public
+ * License along with this library; if not, write to the Free Software
+ * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
+ */
+
+#ifndef CacheClientBlackBerry_h
+#define CacheClientBlackBerry_h
+
+namespace WebCore {
+
+class CacheClientBlackBerry {
+public:
+    static CacheClientBlackBerry* get();
+
+    void initialize();
+    void updateCacheCapacity();
+
+private:
+    CacheClientBlackBerry();
+    unsigned m_lastCapacity;
+};
+
+} // WebCore
+
+#endif // CacheClientBlackBerry_h
